[package]
name = "prio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
#serde_json = "1"
serde_yaml = "0.9"

walkdir = "2"

#rusqlite = { version = "0.28", features = ["bundled-full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "chrono", "macros" ] }

metrohash = "1"

clap = "4.0.26"
dialoguer = { version = "0.10", features = ["fuzzy-select"] }

rand = "0.8.5"

chrono = "0.4"

anyhow = "1"

skillratings = "0.26.0"
